--- a/WhatToDo.Website/ClientApp/src/app/navbar/navbar.component.html
+++ b/WhatToDo.Website/ClientApp/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid justify-content-center">
     <a class="navbar-brand" href="#">Home</a>
     
