--- a/WhatToDo.Website/ClientApp/src/app/app.component.css
+++ b/WhatToDo.Website/ClientApp/src/app/app.component.css
@@ -5,6 +5,7 @@
   height: 100%;
 }
 
-#content{
-    height: 100vh;
+#content {
+  height: 100vh;
+  box-shadow: 0px 6px 5px 3px rgba(0, 0, 0, .2);
 }
