--- a/WhatToDo.Website/ClientApp/src/app/app.component.html
+++ b/WhatToDo.Website/ClientApp/src/app/app.component.html
@@ -1,8 +1,8 @@
 <app-navbar></app-navbar>
-<div class="container-fluid ">
+<div class="container-fluid">
   <div class="row justify-content-center">
     <div id="content" class="col-lg-5 bg-secondary text-center">
-      <img class="img-crop" src="https://d-art.ppstatic.pl/kadry/k/r/1/0a/3f/55c60ea0f41fb_o_full.jpg"/>
+      <app-place-card></app-place-card>
     </div>
   </div>
 </div>
