--- a/WhatToDo.Website/ClientApp/src/app/app.component.html
+++ b/WhatToDo.Website/ClientApp/src/app/app.component.html
@@ -2,7 +2,7 @@
 <div class="container-fluid">
   <div class="row justify-content-center">
     <div id="content" class="col-lg-5 bg-secondary text-center">
-      <app-place-card></app-place-card>
+      <app-content></app-content>
     </div>
   </div>
 </div>
