add navigation buttons

--- a/WhatToDo.Website/ClientApp/src/app/content/content.component.html
+++ b/WhatToDo.Website/ClientApp/src/app/content/content.component.html
@@ -1,5 +1,6 @@
 <app-place-card
-  *ngFor="let place of places"
   [place]="place"
   >
 </app-place-card>
+<button (click)="prevPlace()">Poprzedni</button>
+<button (click)="nextPlace()">Następny</button>
