--- a/WhatToDo.Website/ClientApp/src/app/place-card/place-card.component.html
+++ b/WhatToDo.Website/ClientApp/src/app/place-card/place-card.component.html
@@ -1,5 +1,5 @@
 <div class="card bg-dark text-white h-100">
-  <img class="img-crop card-img" src="{{place.thumbnail.source}}" />
+  <img class="img-crop card-img" src="{{place.thumbnail?.source}}" />
   <div class="card-img-overlay">
     <div class="row align-items-start">
       <div class="col-md-auto">
