--- a/WhatToDo.Website/ClientApp/src/app/navbar/navbar.component.html
+++ b/WhatToDo.Website/ClientApp/src/app/navbar/navbar.component.html
@@ -1,7 +1,10 @@
 <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid justify-content-center">
     <a class="navbar-brand" href="#">Home</a>
-    
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item"><a class="nav-link" routerLink="/categories" routerLinkActive="active">Categories</a></li>
+      <li class="nav-item"><a class="nav-link" routerLink="/places" routerLinkActive="active">Places</a></li>
+    </ul>
   </div>
 
 </nav>
