add categories and install font awesome

--- a/WhatToDo.Website/ClientApp/src/styles.css
+++ b/WhatToDo.Website/ClientApp/src/styles.css
@@ -1,1 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
+.category-container {
+  width: 33.33%;
+  box-sizing: border-box;
+  align-content: center;
+}
+
+.category-badge {
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+}
