--- a/WhatToDo.Website/ClientApp/src/app/categories/categories.component.html
+++ b/WhatToDo.Website/ClientApp/src/app/categories/categories.component.html
@@ -1,1 +1,6 @@
-<p>categories works!</p>
+<div class="d-flex flex-wrap">
+  <div align="center" *ngFor="let category of categories" class="category-container p-4">
+    <app-category [category] = "category">
+    </app-category>
+  </div>
+</div>
