--- a/WhatToDo.Website/ClientApp/src/app/category/category.component.html
+++ b/WhatToDo.Website/ClientApp/src/app/category/category.component.html
@@ -1,4 +1,4 @@
-<div class="category-badge bg-dark">
+<div class="category-badge bg-dark" [ngClass]="{'cat-enabled': enabled, 'cat-disabled': !enabled}" (click)="toggleCategory()">
   <div class="d-inline align-middle">
     <fa-icon class="text-light" [icon]="faIcon" size="3x"></fa-icon>
   </div>
