add category filtering

--- a/WhatToDo.Website/ClientApp/src/app/categories/categories.component.html
+++ b/WhatToDo.Website/ClientApp/src/app/categories/categories.component.html
@@ -3,5 +3,5 @@
     <app-category [category]="category" (categoryStatusEvent)="toggleCategory($event)">
     </app-category>
   </div>
-  <button routerLink="/places" routerLinkActive="active">Potwierdź</button>
+  <button (click)="submit()">Potwierdź</button>
 </div>
