replace category bg colors and fix vertical alignment

--- a/WhatToDo.Website/ClientApp/src/app/category/category.component.html
+++ b/WhatToDo.Website/ClientApp/src/app/category/category.component.html
@@ -1,6 +1,6 @@
-<div class="category-badge" [style.background-color]="bgColor" [ngClass]="{'cat-enabled': enabled, 'cat-disabled': !enabled}" (click)="toggleCategory()">
-  <div class="d-inline align-middle" >
-    <fa-icon class="text-light" [icon]="faIcon" size="3x"></fa-icon>
+<div class="category-badge row align-items-center" [style.background-color]="bgColor" [ngClass]="{'cat-enabled': enabled, 'cat-disabled': !enabled}" (click)="toggleCategory()">
+  <div class="flex-column">
+    <fa-icon class="cat-icon" [icon]="faIcon" size="3x"></fa-icon>
   </div>
 </div>
 <small>{{category.name}}</small>  
