--- a/WhatToDo.Website/ClientApp/src/app/categories/categories.component.html
+++ b/WhatToDo.Website/ClientApp/src/app/categories/categories.component.html
@@ -3,5 +3,9 @@
     <app-category [category]="category" (categoryStatusEvent)="toggleCategory($event)">
     </app-category>
   </div>
-  <button (click)="submit()">Potwierdź</button>
+</div>
+<div class="row">
+  <div class="col">
+    <button class="btn btn-light shadow" (click)="submit()">Przeglądaj</button>
+  </div>
 </div>
