--- a/WhatToDo.Website/ClientApp/src/app/navbar/navbar.component.css
+++ b/WhatToDo.Website/ClientApp/src/app/navbar/navbar.component.css
@@ -1,3 +1,4 @@
 #navbar {
-  box-shadow: 0px 6px 5px 3px rgba(0, 0, 0, .2);
+  box-shadow: 0px 3px 5px 3px rgba(0, 0, 0, .2);
+  background-color: #101019;
 }
