--- a/WhatToDo.Website/ClientApp/src/app/navbar/navbar.component.html
+++ b/WhatToDo.Website/ClientApp/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav id="navbar" class="navbar navbar-expand-lg navbar-dark">
   <div class="container-fluid justify-content-center">
     <a class="navbar-brand" href="#">Home</a>
     <ul class="navbar-nav mr-auto">
@@ -6,5 +6,4 @@
       <li class="nav-item"><a class="nav-link" routerLink="/places" routerLinkActive="active">Places</a></li>
     </ul>
   </div>
-
 </nav>
