--- a/WhatToDo.Website/ClientApp/src/styles.css
+++ b/WhatToDo.Website/ClientApp/src/styles.css
@@ -12,5 +12,15 @@
 }
 
 .cat-icon {
-    opacity: 0.8;
+  opacity: 0.8;
+}
+
+#main-container {
+  background-color: #FFD333;
+}
+
+#main-content {
+  background-color: rgba(255, 255, 0, 0.15);
+  height: 100vh;
+  box-shadow: 0px 6px 5px 3px rgba(0, 0, 0, .2);
 }
