add vignette effect on place card img

--- a/WhatToDo.Website/ClientApp/src/app/place-card/place-card.component.css
+++ b/WhatToDo.Website/ClientApp/src/app/place-card/place-card.component.css
@@ -10,3 +10,7 @@
   background-color: rgba(0,0,0, .3);
   backdrop-filter: blur(4px);
 }
+
+.card-img-vignette {
+  box-shadow: inset 0px 0px 85px rgba(0,0,0,0.4);
+}
