--- a/WhatToDo.Website/ClientApp/src/app/place-card/place-card.component.html
+++ b/WhatToDo.Website/ClientApp/src/app/place-card/place-card.component.html
@@ -1,6 +1,6 @@
-<div class="card bg-dark text-white h-100">
+<div class="card bg-dark text-white h-100 vignette">
   <img class="img-crop card-img" src="{{place.thumbnail?.source}}" />
-  <div class="card-img-overlay">
+  <div class="card-img-overlay card-img-vignette">
     <div class="row align-items-start">
       <div class="col-md-auto">
         <h1 class="card-title img-text-bg px-2">{{place.name}}</h1>
