--- a/WhatToDo.Website/ClientApp/src/styles.css
+++ b/WhatToDo.Website/ClientApp/src/styles.css
@@ -26,3 +26,7 @@
   height: 100vh;
   box-shadow: 0px 6px 5px 3px rgba(0, 0, 0, .2);
 }
+
+.vignette {
+  box-shadow: inset 0px 0px 85px rgba(0,0,0,0.4);
+}
