remove padding from main component

--- a/WhatToDo.Website/ClientApp/src/app/app.component.html
+++ b/WhatToDo.Website/ClientApp/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-navbar></app-navbar>
 <div class="container-fluid">
   <div id="main-container" class="row justify-content-center">
-    <div id="main-content" class="col-lg-5 text-center">
+    <div id="main-content" class="col-lg-5 text-center p-0">
       <router-outlet></router-outlet>
     </div>
   </div>
