--- a/WhatToDo.Website/ClientApp/src/app/app.component.html
+++ b/WhatToDo.Website/ClientApp/src/app/app.component.html
@@ -1,8 +1,10 @@
 <app-navbar></app-navbar>
 <div class="container-fluid">
   <div id="main-container" class="row justify-content-center">
+    <div class="col"></div>
     <div id="main-content" class="col-lg-5 text-center p-0">
       <router-outlet></router-outlet>
     </div>
+    <div class="col"></div>
   </div>
 </div>
