--- a/WhatToDo.Website/ClientApp/src/app/content/content.component.html
+++ b/WhatToDo.Website/ClientApp/src/app/content/content.component.html
@@ -1,7 +1,6 @@
 <app-place-card
   *ngIf="place!=undefined"
   [place]="place"
+  (navEvent)="navFunc($event)" 
   >
 </app-place-card>
-<button (click)="prevPlace()">Poprzedni</button>
-<button (click)="nextPlace()">Następny</button>
