tweak card navigation buttons

--- a/WhatToDo.Website/ClientApp/src/app/place-card/place-card.component.html
+++ b/WhatToDo.Website/ClientApp/src/app/place-card/place-card.component.html
@@ -16,11 +16,11 @@
     </div>
     <div class="row h-100">
       <div class="col">
-        <button class="h-10 btn-nav-vertical" (click)="prevPlace()">prev</button>
+        <button class="h-100 btn-nav-vertical text-light" (click)="prevPlace()"><fa-icon [icon]="leftIcon"></fa-icon></button>
       </div>
       <div class="col"></div>
       <div class="col">
-        <button class="h-100 btn-nav-vertical"(click)="nextPlace()">next</button>
+        <button class="h-100 btn-nav-vertical text-light"(click)="nextPlace()"><fa-icon [icon]="rightIcon"></fa-icon></button>
       </div>
     </div>
     <div class="row mt-auto">
