--- a/WhatToDo.Website/ClientApp/src/styles.css
+++ b/WhatToDo.Website/ClientApp/src/styles.css
@@ -30,3 +30,8 @@
 .vignette {
   box-shadow: inset 0px 0px 85px rgba(0,0,0,0.4);
 }
+
+.btn-nav-vertical {
+    background-color: transparent;
+    border: 0px;
+}
