--- a/WhatToDo.Website/ClientApp/src/app/place-card/place-card.component.css
+++ b/WhatToDo.Website/ClientApp/src/app/place-card/place-card.component.css
@@ -7,10 +7,50 @@
 
 .img-text-bg {
   border-radius: 8px;
-  background-color: rgba(0,0,0, .3);
-  backdrop-filter: blur(4px);
+  background-color: rgba(0,0,0, .4);
+  backdrop-filter: blur(6px);
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.4);
+  color: rgba(255,255,255, 0.9);
 }
 
 .card-img-vignette {
-  box-shadow: inset 0px 0px 85px rgba(0,0,0,0.4);
+  box-shadow: inset 0px 25px 20px rgba(0,0,0,0.4);
+}
+
+.side-nav {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+}
+
+.btn-nav-vertical {
+  background-color: transparent;
+  border: 0px;
+  width: 100%;
+  height: 100%;
+}
+
+@media(hover: hover) and (pointer: fine) {
+  .side-nav-left:hover {
+    background: linear-gradient(to right, rgba(0,0,0, 0.5), transparent);
+  }
+
+  .side-nav-right:hover {
+    background: linear-gradient(to left, rgba(0,0,0, 0.5), transparent);
+  }
+}
+
+.side-nav-left-icon {
+  float: left;
+  margin-left: 1rem;
+  color: rgba(255,255,255,0.35);
+}
+
+.side-nav-right-icon {
+  float: right;
+  margin-right: 1rem;
+  color: rgba(255,255,255,0.35);
 }
