--- a/WhatToDo.Website/ClientApp/src/app/categories/categories.component.html
+++ b/WhatToDo.Website/ClientApp/src/app/categories/categories.component.html
@@ -1,11 +1,21 @@
-<div class="d-flex flex-wrap">
-  <div align="center" *ngFor="let category of categories" class="category-container p-4">
-    <app-category [category]="category" (categoryStatusEvent)="toggleCategory($event)">
-    </app-category>
+<div class="row mt-3">
+  <div class="col">
+    <h1 style="opacity:0.7">Wybierz Kategorie</h1>
   </div>
 </div>
+
 <div class="row">
   <div class="col">
-    <button class="btn btn-light shadow" (click)="submit()">Przeglądaj</button>
+    <div class="d-flex flex-wrap">
+      <div align="center" *ngFor="let category of categories" class="category-container p-3">
+        <app-category [category]="category" (categoryStatusEvent)="toggleCategory($event)">
+        </app-category>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <button class="btn btn-light shadow" (click)="submit()">Przeglądaj</button>
+      </div>
+    </div>
   </div>
 </div>
