--- a/WhatToDo.Website/ClientApp/src/styles.css
+++ b/WhatToDo.Website/ClientApp/src/styles.css
@@ -8,7 +8,16 @@
   height: 100px;
   width: 100px;
   border-radius: 50%;
-  box-shadow: 2px 3px 3px 3px rgba(0, 0, 0, .3);
+  box-shadow: 2px 3px 3px 3px rgba(0, 0, 0, .2);
+}
+
+.category-box {
+  border-radius: 20px;
+  box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.15);
+}
+
+.category-title {
+  opacity: 0.6;
 }
 
 .cat-icon {
@@ -16,7 +25,7 @@
 }
 
 #main-container {
-  background-color: #FFD333;
+  background-color: #f94144;
   z-index: 5;
   position: relative;
 }
