--- a/WhatToDo.Website/ClientApp/src/app/navbar/navbar.component.html
+++ b/WhatToDo.Website/ClientApp/src/app/navbar/navbar.component.html
@@ -1,9 +1,9 @@
 <nav id="navbar" class="navbar navbar-expand-lg navbar-dark">
   <div class="container-fluid justify-content-center">
-    <a class="navbar-brand" href="#">Home</a>
+    <a class="navbar-brand" routerLink="">[LOGO]</a>
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item"><a class="nav-link" routerLink="/categories" routerLinkActive="active">Categories</a></li>
-      <li class="nav-item"><a class="nav-link" routerLink="/places" routerLinkActive="active">Places</a></li>
+      <li class="nav-item"><a class="nav-link" routerLink="/categories" routerLinkActive="active">Kategorie</a></li>
+      <li class="nav-item"><a class="nav-link" routerLink="/places" routerLinkActive="active">Miejsca</a></li>
     </ul>
   </div>
 </nav>
